[gd_scene load_steps=13 format=3 uid="uid://dimcg3bf3dmer"]

[ext_resource type="Script" path="res://Classes/Platforms/ConcretePlatorms/FirePlatform/FirePlatform.gd" id="1_t05om"]
[ext_resource type="Texture2D" uid="uid://befh42e30d2my" path="res://Sprites/FirePlatform/colere-1.png" id="2_xwx25"]
[ext_resource type="Texture2D" uid="uid://b3senntdqo53n" path="res://Sprites/FirePlatform/colere-2.png" id="3_5nvu3"]
[ext_resource type="Texture2D" uid="uid://bdty1uk6rk8sj" path="res://Sprites/FirePlatform/fire-etat-1.png" id="4_ks8aw"]
[ext_resource type="Texture2D" uid="uid://dubwwhid8mgis" path="res://Sprites/FirePlatform/fire-etat-2.png" id="5_vw8g4"]
[ext_resource type="Texture2D" uid="uid://buajpqa1n3jlp" path="res://Sprites/FirePlatform/fire-etat-3.png" id="6_l5bh1"]
[ext_resource type="Texture2D" uid="uid://c5glvec00hdls" path="res://Sprites/FirePlatform/neutre.png" id="7_14rh0"]
[ext_resource type="AudioStream" uid="uid://ct7xb4c3qfxxg" path="res://Audio/FirePlatform/angry.ogg" id="8_6bjmw"]
[ext_resource type="AudioStream" uid="uid://cw2hpnda3gufd" path="res://Audio/FirePlatform/fire.ogg" id="9_cy83m"]
[ext_resource type="PackedScene" uid="uid://cyqporj048mbs" path="res://Classes/Platforms/SpawnOneShotParticles.tscn" id="10_pdvfo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_woa34"]
size = Vector3(6.4, 1.178, 5)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ix38"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xwx25")
}, {
"duration": 1.0,
"texture": ExtResource("3_5nvu3")
}],
"loop": true,
"name": &"angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ks8aw")
}, {
"duration": 1.0,
"texture": ExtResource("5_vw8g4")
}, {
"duration": 1.0,
"texture": ExtResource("6_l5bh1")
}],
"loop": true,
"name": &"fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_14rh0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="FirePlatform" type="StaticBody3D"]
collision_layer = 4
script = ExtResource("1_t05om")
speed = null
counter = null

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0155716, -0.0351091, 0)
shape = SubResource("BoxShape3D_woa34")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.742998, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.016, -0.2, 0)
shape = SubResource("BoxShape3D_woa34")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.742998, 0)
sprite_frames = SubResource("SpriteFrames_4ix38")
animation = &"idle"

[node name="angry" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_6bjmw")
volume_db = -3.0

[node name="fire" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_cy83m")

[node name="SpawnOneShotParticles" parent="." instance=ExtResource("10_pdvfo")]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
